--- a/src/app/policy-list/policy-list.component.html
+++ b/src/app/policy-list/policy-list.component.html
@@ -12,8 +12,8 @@ policy-list works!
   <tbody>
     <tr *ngFor="let policy of policies">
 
-      <td>{{policy.policyNumber}}</td>
-      <td>{{policy.creationDate}}</td>
+      <td>{{policy.qtext}}</td>
+      <td>{{policy.origin}}</td>
       <td>{{policy.expireDate}}</td>
       <td>{{policy.policyAmount}}</td>
       <td>
