--- a/src/app/policy-list/policy-list.component.html
+++ b/src/app/policy-list/policy-list.component.html
@@ -15,7 +15,7 @@ policy-list works!
       <td>{{policy.qtext}}</td>
       <td>{{policy.origin}}</td>
       <td>{{policy.expireDate}}</td>
-      <td>{{policy.policyAmount}}</td>
+      <td>{{policy.id}}</td>
       <td>
           <button (click)="delete(policy.id)">Delete</button>
       </td>
